# trabalho-03-aed

./: CMakeLists.txt  app.c  app.h  main.c
controller/: product-controller.c  product-controller.h
controller/headers/: product-controller.h
models/: headers.h  product.h
service/: product-service.c  product-service.h
service/headers/: product-service.h
utils/: b-tree.c  file.c  queue.c  utils.c
utils/headers/: b-tree.h  file.h  queue.h  utils.h
views/: product-view.c
views/headers/: product-view.h  utils.h
